tests/machine/x/go/group_by_sort.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_sort.go:16:13: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:17:3: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:21:3: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:25:3: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:29:3: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:34:22: undefined: Grouped
../../../tests/machine/x/go/group_by_sort.go:97:16: undefined: Grouped
../../../tests/machine/x/go/group_by_sort.go:99:30: undefined: Grouped

1: //go:build ignore
